--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.0.18",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.0",
