--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.0.18",
+    "@nextui-org/react": "^2.3.6",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.0",
     "@tailwindcss/forms": "^0.5.7",
@@ -21,6 +22,7 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "framer-motion": "^11.2.6",
     "next": "^14.0.2",
     "openai": "^4.43.0",
     "openai-edge": "^1.2.2",
