--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.0.18",
-    "@nextui-org/react": "^2.3.6",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.0",
     "@tailwindcss/forms": "^0.5.7",
@@ -21,8 +22,10 @@
     "apexcharts": "^3.49.1",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
+    "lucide-react": "^0.379.0",
     "next": "^14.0.2",
     "openai": "^4.43.0",
     "openai-edge": "^1.2.2",
@@ -30,7 +33,9 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.2"
