--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ai": "^3.1.3",
     "apexcharts": "^3.49.1",
     "autoprefixer": "10.4.15",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "next": "^14.0.2",
