--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
+    "vaul": "^0.9.1",
     "zod": "^3.22.2"
   },
   "devDependencies": {
