--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "framer-motion": "^11.2.6",
     "lucide-react": "^0.379.0",
     "next": "^14.0.2",
+    "next-themes": "^0.3.0",
     "openai": "^4.43.0",
     "openai-edge": "^1.2.2",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
