--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.1",
     "ai": "^3.1.3",
+    "aos": "^2.3.4",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -31,6 +32,7 @@
     "cmdk": "^1.0.0",
     "framer-motion": "^11.2.6",
     "lucide-react": "^0.379.0",
+    "lottie-react": "^2.4.0",
     "next": "^14.0.2",
     "openai": "^4.43.0",
     "openai-edge": "^1.2.2",
@@ -42,11 +44,13 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
+    "swiper": "^11.1.1",
     "vaul": "^0.9.1",
     "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
+    "@types/aos": "^3.0.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
     "@vercel/style-guide": "^5.0.1",
