--- a/package.json
+++ b/package.json
@@ -30,27 +30,28 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "embla-carousel-react": "^8.1.5",
     "framer-motion": "^11.2.6",
-    "lucide-react": "^0.379.0",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.379.0",
     "next": "^14.0.2",
     "openai": "^4.43.0",
     "openai-edge": "^1.2.2",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^11.1.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
-    "swiper": "^11.1.1",
     "vaul": "^0.9.1",
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.1",
     "@types/aos": "^3.0.7",
+    "@types/bcrypt": "^5.0.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
     "@vercel/style-guide": "^5.0.1",
