--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "framer-motion": "^11.2.6",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.379.0",
+    "marked": "^13.0.0",
     "next": "^14.0.2",
     "openai": "^4.43.0",
     "openai-edge": "^1.2.2",
