--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@stripe/stripe-js": "^4.0.0",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.0",
     "@tailwindcss/forms": "^0.5.7",
@@ -39,6 +40,7 @@
     "openai": "^4.43.0",
     "openai-edge": "^1.2.2",
     "postcss": "8.4.31",
+    "raw-body": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stripe": "^15.12.0",
