--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.379.0",
     "marked": "^13.0.0",
+    "mercadopago": "^2.0.10",
     "next": "^14.0.2",
     "next-themes": "^0.3.0",
     "openai": "^4.43.0",
