--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^4.0.0",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.0",
     "@tailwindcss/forms": "^0.5.7",
@@ -43,6 +45,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sonner": "^1.5.0",
+    "stripe": "^16.0.0",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.3.3",
